<resources>
    <string name="app_name">Ody</string>
    <string name="analyze">"<b>Analyze:</b> \nAfter taking your picture, click \" Analyze \" and let our technology work its magic.</string>
    <string name="snap_picture">"<b>Snap a Picture:</b> \nTap the button to open your camera and capture an image.</string>
    <string name="view_results">"<b>View Results:</b> \nWe\'ll present you with the analyzed image, highlighting and naming the detected objects. Dive in and explore the details!</string>
    <string name="how_it_works">How it Works:</string>
    <string name="discover_the_world">Discover the world around you like never before. With our cutting-edge object detection technology, identifying objects within an image is just a snap away.</string>
    <string name="ready_to_snap">Ready to start your discovery? Let\'s get started!</string>
    <string name="button_get_started">Get Started</string>
    <string name="title_activity_analyze">AnalyzeActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="button_open_camera">Open Camera</string>
    <string name="are_you_ready_to_take_a_photo">Are you ready to take a photo?</string>
    <string name="retake">Retake</string>
    <string name="button_text_analyze">Analyze</string>
    <string name="save">Save</string>
    <string name="analysis_history">List of all images analysed</string>
    <string name="no_analysis_history">There are no records of analysis made</string>
    <string name="delete">Delete</string>
    <string name="serial_number">%1$d</string>
    <string name="no_objects_detected">No objects detected</string>
    <string name="press_back_again_to_exit">Press back again to exit</string>
    <string name="permissions_denied">Permissions Denied</string>
    <string name="camera_and_storage_permissions_are_necessary">Camera and storage permissions are necessary to continue. Would you like to update these permissions in the app settings?</string>
    <string name="go_to_settings">Go to Settings</string>
</resources>