<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.WelcomeActivity">

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:text="@string/discover_the_world"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/how_it_works"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/how_it_works"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_margin="@dimen/activity_horizontal_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/description" />

    <TextView
        android:id="@+id/snap_picture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/snap_picture"
        android:textSize="20sp"
        android:layout_margin="@dimen/activity_horizontal_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/how_it_works" />
    <TextView
        android:id="@+id/analyze"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/analyze"
        android:textSize="20sp"
        android:layout_margin="@dimen/activity_horizontal_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/snap_picture" />
    <TextView
        android:id="@+id/view_results"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_results"
        android:textSize="20sp"
        android:layout_margin="@dimen/activity_horizontal_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/analyze" />

    <TextView
        android:id="@+id/lets_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ready_to_snap"
        android:textSize="20sp"
        android:layout_margin="@dimen/activity_horizontal_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_results" />

    <Button
        android:id="@+id/button_snap_picture"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:text="@string/button_get_started"
        android:textSize="15dp"
        android:layout_margin="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lets_start" />

</androidx.constraintlayout.widget.ConstraintLayout>